--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <!-- logo -->
-      <img src="./images/">
+      <img src="./images/intro-pic.jpg">
       <h1>Exceptional Realty Group</h1>
 
       <nav>
